<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.taisau.facecardcompare.ui.WelcomeActivity"
    android:background="@color/white_fff">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/welcom_img_logo"
            android:src="@mipmap/logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="80px"
            android:layout_marginTop="80px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40px"
            android:text="@string/wel_tittle"
            android:id="@+id/welcom_text_tittle"
            android:textColor="@color/color_132D4E"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20px"
            android:text="设备序列号："/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/account"
            android:text="adder1"
            android:paddingLeft="18px"
            android:textSize="24px"
            android:background="@mipmap/input_box"
            android:layout_marginBottom="43px"
            android:id="@+id/welcom_edit_account"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="注册平台IP地址："/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="43px"
            >
            <com.taisau.facecardcompare.widget.RegionNumberEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="3"
                android:maxEms="3"
                android:id="@+id/welcom_edit_ip1"
                android:singleLine="true"
                android:inputType="number"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="."/>
            <com.taisau.facecardcompare.widget.RegionNumberEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="3"
                android:maxEms="3"
                android:id="@+id/welcom_edit_ip2"
                android:singleLine="true"
                android:inputType="number"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="."/>
            <com.taisau.facecardcompare.widget.RegionNumberEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxEms="3"
                android:maxLength="3"
                android:id="@+id/welcom_edit_ip3"
                android:singleLine="true"
                android:inputType="number"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="."/>
            <com.taisau.facecardcompare.widget.RegionNumberEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="3"
                android:maxEms="3"
                android:id="@+id/welcom_edit_ip4"
                android:singleLine="true"
                android:inputType="number"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20px"
            android:text="注册平台端口号："/>

        <com.taisau.facecardcompare.widget.RegionNumberEditText
            android:id="@+id/welcom_edit_port"
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40px"
            android:inputType="number"
            android:background="@mipmap/input_box"
            android:paddingLeft="18px"
            android:text="8090"
            android:textSize="24px" />
        <Button
            android:id="@+id/btn_network_login"
            android:layout_width="150dp"
            android:layout_height="60px"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/setting_button_background"
            android:text="登录网络"
            android:textColor="@color/color_999"
            android:textSize="24px"
            android:layout_marginBottom="40px"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24px"
            android:text="导出设备码"
            android:id="@+id/welcome_text_out_machine_key"
            android:textColor="@color/color_132D4E"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40px"
            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24px"
            android:text="导入Key"
            android:id="@+id/welcome_text_in_machine_key"
            android:textColor="@color/color_132D4E"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40px"
            android:visibility="gone"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="设备使用KEY"
            android:paddingLeft="18px"
            android:textSize="24px"
            android:layout_marginBottom="30px"
            android:id="@+id/welcom_edit_key"
            android:text=""
            android:background="@mipmap/input_box"
            android:visibility="gone"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="32px"
            android:textColor="@color/white_fff"
            android:text="@string/ensure"
            android:layout_marginBottom="30px"
            android:id="@+id/welcome_button_ensure"
            android:background="@drawable/welcome_btn_click"/>
    </LinearLayout>
</ScrollView>